--- a/workshop/index.html
+++ b/workshop/index.html
@@ -1,26 +1,16 @@
-<!doctype html>
-<!--
-/*
- * Copyright 2021 Google Inc. All Rights Reserved.
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
--->
+<!DOCTYPE html>
+
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Building an augmented reality application with the WebXR Device API</title>
-    <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      Building an augmented reality application with the WebXR Device API
+    </title>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css"
+    />
     <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
 
     <!-- three.js -->
@@ -31,19 +21,33 @@
     <script src="../shared/utils.js"></script>
   </head>
   <body>
-    <div id="wrong-hosting-root" class="mdc-card demo-card" style="height:2000px">
+    <div
+      id="wrong-hosting-root"
+      class="mdc-card demo-card"
+      style="height: 2000px"
+    >
       <h2>Wrong hosting root</h2>
       <p>
-        This application was hosted incorrectly: <code>../shared/app.css</code> could not be found.
+        This application was hosted incorrectly:
+        <code>../shared/app.css</code> could not be found.
       </p>
-      <p>Make sure you're hosting the entire project root, and not just this folder. The url you're using to access this file should look something like <code>http://localhost:8080/workshop/index.html</code>.</p>
+      <p>
+        Make sure you're hosting the entire project root, and not just this
+        folder. The url you're using to access this file should look something
+        like <code>http://localhost:8080/workshop/index.html</code>.
+      </p>
     </div>
     <div id="enter-ar-info" class="mdc-card demo-card">
       <h2>Augmented Reality with the WebXR Device API</h2>
       <p>
-        This is an experiment using augmented reality features with the WebXR Device API.
-        Upon entering AR, you will be surrounded by a world of cubes.
-        Learn more about these features from the <a href="https://codelabs.developers.google.com/codelabs/ar-with-webxr">Building an augmented reality application with the WebXR Device API</a> Code Lab.
+        This is an experiment using augmented reality features with the WebXR
+        Device API. Upon entering AR, you will be surrounded by a world of
+        cubes. Learn more about these features from the
+        <a href="https://codelabs.developers.google.com/codelabs/ar-with-webxr"
+          >Building an augmented reality application with the WebXR Device
+          API</a
+        >
+        Code Lab.
       </p>
 
       <!-- Starting an immersive WebXR session requires user interaction. Start the WebXR experience with a simple button. -->
@@ -55,8 +59,13 @@
     <div id="unsupported-info" class="mdc-card demo-card">
       <h2>Unsupported Browser</h2>
       <p>
-        Your browser does not support AR features with WebXR. Learn more about these features from the
-        <a href="https://codelabs.developers.google.com/codelabs/ar-with-webxr">Building an augmented reality application with the WebXR Device API</a> Code Lab.
+        Your browser does not support AR features with WebXR. Learn more about
+        these features from the
+        <a href="https://codelabs.developers.google.com/codelabs/ar-with-webxr"
+          >Building an augmented reality application with the WebXR Device
+          API</a
+        >
+        Code Lab.
       </p>
     </div>
     <script src="app.js"></script>
