--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Document</title>
   </head>
   <body>
-    <a href="/final">Final</a> <br />
-    <a href="/step-03">step-03</a> <br />
-    <a href="/step-04">step-04</a> <br />
+    <a href="./final">Final</a> <br />
+    <a href="./step-03">step-03</a> <br />
+    <a href="step-04">step-04</a> <br />
     <a href="/work">work</a> <br />
-    <a href="/workshop">workshop</a> <br />
+    <a href="/webxr/workshop">workshop</a> <br />
 
     <h1>Lorem, ipsum.</h1>
   </body>
