--- a/workshop/index.html
+++ b/workshop/index.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" type="text/css" href="../shared/app.css" />
     <script src="../shared/utils.js"></script>
     <style>
-      .info {
+      #info {
         width: 100%;
         max-height: 200px;
         overflow: auto;
