--- a/workshop/index.html
+++ b/workshop/index.html
@@ -40,11 +40,24 @@
         max-height: 200px;
         overflow: auto;
         padding: 1.5rem;
+        border: 4px solid red;
+        margin: 1rem;
       }
     </style>
   </head>
   <body>
-    <div id="info"></div>
+    <div
+      id="info"
+      style="
+        width: 100%;
+        min-height: 30px;
+        max-height: 200px;
+        overflow: auto;
+        padding: 1.5rem;
+        border: 4px solid red;
+        margin: 1rem;
+      "
+    ></div>
     <div
       id="wrong-hosting-root"
       class="mdc-card demo-card"
